# image_outline_plugin

./: .project  CMakeLists.txt  LICENSE  README.md  package.xml
include/image_outline_plugin/: image_outline_plugin.h
src/: image_outline_plugin.cpp
