<?xml version="1.0"?>
<package>
	<name>image_outline_plugin</name>
	<version>1.0.0</version>
	<description>Package that creates image outlines and sends the data using ZMQ</description>
	<author email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</author>
	<maintainer email="carloscosta.cmcc@gmail.com">Carlos Miguel Correia da Costa</maintainer>
	<license>BSD</license>



	<!-- ################################################################## -->
	<!-- Build system -->
	<!-- ################################################################## -->

	<buildtool_depend>cmake</buildtool_depend>
	<buildtool_depend>pkg-config</buildtool_depend>
	<run_depend>catkin</run_depend>



	<!-- ################################################################## -->
	<!-- Build dependencies -->
	<!-- ################################################################## -->

	<build_depend>gazebo</build_depend>
	<build_depend>laser_projector_bridge</build_depend>



	<!-- ################################################################## -->
	<!-- Run dependencies -->
	<!-- ################################################################## -->

	<run_depend>gazebo</run_depend>
	<run_depend>laser_projector_bridge</run_depend>



	<export>
		<build_type>cmake</build_type>
	</export>
</package>
